--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "typescript-eslint": "^8.23.0"
     },
     "dependencies": {
+        "@balkangraph/familytree.js": "^1.9.46",
         "@headlessui/react": "^2.2.0",
         "@inertiajs/react": "^2.1.4",
         "@radix-ui/react-avatar": "^1.1.3",
@@ -40,13 +41,16 @@
         "@radix-ui/react-toggle-group": "^1.1.2",
         "@radix-ui/react-tooltip": "^1.1.8",
         "@tailwindcss/vite": "^4.1.11",
+        "@types/d3": "^7.4.3",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "d3": "^7.9.0",
         "globals": "^15.14.0",
+        "gojs": "^3.0.27",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
@@ -57,6 +61,8 @@
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
         "typescript": "^5.7.2",
+        "vis-data": "^8.0.3",
+        "vis-network": "^10.0.2",
         "vite": "^7.0.4",
         "ziggy-js": "^2.6.0"
     },
