--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "dependencies": {
         "@balkangraph/familytree.js": "^1.9.46",
         "@headlessui/react": "^2.2.0",
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "@inertiajs/react": "^2.1.4",
         "@radix-ui/react-avatar": "^1.1.3",
         "@radix-ui/react-checkbox": "^1.1.4",
