--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
         "@vitejs/plugin-react": "^4.6.0",
+        "chart.js": "^4.5.1",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
@@ -57,10 +58,13 @@
         "globals": "^15.14.0",
         "gojs": "^3.0.27",
         "input-otp": "^1.4.2",
+        "jspdf": "^3.0.3",
         "laravel-vite-plugin": "^2.0",
         "lodash": "^4.17.21",
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
+        "react-chartjs-2": "^5.3.1",
+        "react-datepicker": "^8.8.0",
         "react-dom": "^19.0.0",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
