--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "@types/d3": "^7.4.3",
         "@types/react": "^19.0.3",
         "@types/react-dom": "^19.0.2",
+        "@types/react-select": "^5.0.0",
         "@vitejs/plugin-react": "^4.6.0",
         "chart.js": "^4.5.1",
         "class-variance-authority": "^0.7.1",
@@ -64,8 +65,10 @@
         "lucide-react": "^0.475.0",
         "react": "^19.0.0",
         "react-chartjs-2": "^5.3.1",
+        "react-country-state-city": "^1.1.12",
         "react-datepicker": "^8.8.0",
         "react-dom": "^19.0.0",
+        "react-select": "^5.10.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
         "tailwindcss-animate": "^1.0.7",
