--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
         "react-country-state-city": "^1.1.12",
         "react-datepicker": "^8.8.0",
         "react-dom": "^19.0.0",
+        "react-hot-toast": "^2.6.0",
         "react-select": "^5.10.2",
         "tailwind-merge": "^3.0.1",
         "tailwindcss": "^4.0.0",
